@@ -1,7 +1,10 @@
 package bankDataReader.currencyimpl.views;
 
+import bankDataReader.currencyimpl.currencyInterface.PutMarks;
+import bankDataReader.db.DataBase;
 import bankDataReader.db.User;
 import bankDataReader.dto.BankData;
+import bankDataReader.dto.UsersDTO;
 import bankDataReader.enums.BanksName;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Chat;
@@ -47,13 +50,18 @@ public class Banks {
         sendMessage.setText(titleMessage);
         sendMessage.setChatId(chat.getId());
 
-        InlineKeyboardButton Private = InlineKeyboardButton.builder().text("Приват").callbackData(BanksName.PRIVATBANK.toString()).build();
-        InlineKeyboardButton Mono = InlineKeyboardButton.builder().text("Монобанк").callbackData(BanksName.MONOBANK.toString()).build();
-        InlineKeyboardButton Oshchad = InlineKeyboardButton.builder().text("Ощадбанк").callbackData(BanksName.OSHCHADBANK.toString()).build();
+        try (DataBase db = DataBase.getInstance()){
+            UsersDTO userInfo = db.getUser(Math.toIntExact(chat.getId()));
 
-        InlineKeyboardMarkup inlineKeyboardMarkup = InlineKeyboardMarkup.builder()
-                .keyboard(Collections.singletonList(Arrays.asList(Private, Mono, Oshchad))).build();
-        sendMessage.setReplyMarkup(inlineKeyboardMarkup);
+            List<String> banks = userInfo.getBank();
+            PutMarks<BanksName> putClass = new PutMarks<>();
+            sendMessage.setReplyMarkup(putClass.addButtons(List.of(BanksName.PRIVATBANK,
+                    BanksName.MONOBANK,
+                    BanksName.OSHCHADBANK), banks));
+
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
 
         try {
             absSender.execute(sendMessage);
